[KProcessList] Check size of data before accessing it

BUG: 431334